mesh/istio/virtualservice/catalog-api.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: catalog-api
  namespace: demo-app
spec:
  hosts:
    - catalog-api.demo-app.svc.cluster.local
  http:
    - route:
        - destination:
            host: catalog-api.demo-app.svc.cluster.local
            subset: v1
          weight: 100
        - destination:
            host: catalog-api.demo-app.svc.cluster.local
            subset: v2
          weight: 0
