mesh/istio/virtualservice/checkout-api.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: checkout-api
  namespace: demo-app
spec:
  hosts:
    - checkout-api.demo-app.svc.cluster.local
  http:
    - name: from-frontend-v2
      match:
        - sourceLabels:
            app: frontend
            version: v2
      route:
        - destination:
            host: checkout-api.demo-app.svc.cluster.local
            subset: v2
          weight: 100
    - name: from-frontend-v1
      match:
        - sourceLabels:
            app: frontend
            version: v1
      route:
        - destination:
            host: checkout-api.demo-app.svc.cluster.local
            subset: v1
          weight: 100
    - name: default
      route:
        - destination:
            host: checkout-api.demo-app.svc.cluster.local
            subset: v1
          weight: 100
        - destination:
            host: checkout-api.demo-app.svc.cluster.local
            subset: v2
          weight: 0
