mesh/istio/virtualservice/frontend-ingress.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: frontend-ingress
  namespace: demo-app
spec:
  hosts:
    - "*"
  gateways:
    - frontend-gateway
  http:
    - route:
        - destination:
            host: frontend.demo-app.svc.cluster.local
            subset: v1
          weight: 100
        - destination:
            host: frontend.demo-app.svc.cluster.local
            subset: v2
          weight: 0
