mesh/istio/virtualservice/frontend.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: frontend
  namespace: demo-app
spec:
  hosts:
    - frontend.demo-app.svc.cluster.local
    - frontend.10.136.227.59.sslip.io
  gateways:
    - mesh
    - frontend-gateway
  http:
    - route:
        - destination:
            host: frontend.demo-app.svc.cluster.local
            subset: v1
          weight: 100
        - destination:
            host: frontend.demo-app.svc.cluster.local
            subset: v2
          weight: 0
